--- a/BetterStack.Logs.Serilog.csproj
+++ b/BetterStack.Logs.Serilog.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <DefaultItemExcludes>$(DefaultItemExcludes);example-project/**;dashboard.png</DefaultItemExcludes>
   </PropertyGroup>
