--- a/example-project/ExampleProject.csproj
+++ b/example-project/ExampleProject.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="../BetterStack.Logs.Serilog.csproj" Version="1.0.0" />
+    <PackageReference Include="BetterStack.Logs.Serilog" Version="1.0.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
   </ItemGroup>
