--- a/example-project/ExampleProject.csproj
+++ b/example-project/ExampleProject.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BetterStack.Logs.Serilog" Version="1.0.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="BetterStack.Logs.Serilog" Version="1.1.*" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.*" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.*" />
   </ItemGroup>
 
 </Project>
